<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上运维</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">掌上运维</string>
    <!-- title -->
    <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
    <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
    <string name="titlebar_img_btn_down_arrow_desc">标题栏下箭头</string>
    <string name="colon">：</string> <!-- 冒号 -->

    <string name="uploadPhotoActivityTitle">上传图片</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="feedback_title">用户反馈</string>
    <string name="feedback_content">反馈您遇到的问题以及建议</string>
    <string name="feedback_detail">有事您说话</string>
    <string name="feedback_contact_hint">选填内容(如您的手机号或电子邮件)</string>
    <string name="feedback_content_hint">请输入您的反馈内容(字数240以内)</string>
    <string name="feedback_contact_label">您的联系方式</string>
    <string name="feedback_content_label">欢迎提出宝贵意见，您留下的每个字都将用来改善我们的软件。</string>
    <string name="feedback_btn_label">提   交</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="mos_guide_desc">系统帮助</string>
    <string name="func_nav_title">首页</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="username_label">账号</string>
    <string name="password_label">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="title_activity_base_action_bar">BaseActionBarActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="change_user">切换用户</string>
    <string name="modify_password">修改密码</string>
    <string name="feedback">用户反馈</string>
    <string name="receiver_push_message">接受推送消息</string>
    <string name="is_recommend_nearby_work">是否推荐附近工单</string>
    <string name="check_version">检查更新</string>
    <string name="about_me">关于</string>

    <string name="action_search">搜索</string>

    <string name="cancle">取消</string>
    <string name="title_activity_main_login">MainLoginActivity</string>

    <string name="login_user_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="exit">退出登录</string>
    <string name="title_activity_base_fragment">BaseFragmentActivity</string>

    <string name="personal_nick_name">员工姓名</string>
    <string name="personal_login_name">登录账号</string>
    <string name="personal_org_name">所属部门</string>
    <string name="personal_telnbr">联系电话</string>
    <string name="personal_staff_name">员工姓名</string>
    <string name="personal_mail_box">电子邮箱</string>

    <string name="upload_img_title">上传照片</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">从手机相册选择</string>

    <string name="edit_hint_value">随便说点什么吧</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_ormlite">TestORMLiteActivity</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


</resources>