<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/upload_img_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_img_title_bg"
        android:text="@string/upload_img_title"
        android:textSize="19sp"
        android:gravity="center"
        android:paddingTop="19dp"
        android:paddingBottom="19dp"
        android:textColor="#909090"/>
    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/take_photo_title_bg"
        android:textSize="21sp"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:textColor="#0c70c5"
        android:text="@string/take_photo"
        android:layout_below="@id/upload_img_title"/>
    <TextView
        android:id="@+id/photo_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select_from_photo_album_title_bg"
        android:textSize="21sp"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:textColor="#0c70c5"
        android:text="@string/photo_album"
        android:layout_below="@id/take_photo"/>

    <Button
        android:id="@+id/cancle_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/take_photo_cancle_bg"
        android:textSize="21sp"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:textColor="#0c70c5"
        android:text="@string/cancle"
        android:layout_below="@id/photo_album"
        android:layout_marginTop="9dp"/>

</RelativeLayout>