<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mos="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <include 
        layout="@layout/include_title"
        
        />
    <LinearLayout
        android:id="@+id/loginRoot"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_useless_layout"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login_relative_layout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="30.0dip"
            android:paddingTop="21.0dip" >

            <com.cattsoft.framework.view.EditLabelText
                android:id="@+id/login_edit_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="10.0dip"
                mos:hint_value="@string/username_hint"
                mos:label="@string/username_label"
                mos:backgroundImg="@drawable/common_edit"
                android:saveEnabled="true"
                android:singleLine="true" />

            <com.cattsoft.framework.view.EditLabelText
                android:id="@+id/login_edit_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_username"
                android:layout_alignRight="@+id/login_edit_username"
                android:layout_below="@+id/login_edit_username"
                android:layout_marginTop="15.0dip"
                mos:hint_value="@string/password_hint"
                mos:label="@string/password_label"
                mos:backgroundImg="@drawable/common_edit"
                android:saveEnabled="true"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_relative_layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="10.0dip"
            android:paddingBottom="10.0dip" >

            <CheckBox
                android:id="@+id/login_remember_password"
                style="@style/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:paddingLeft="20dip"
                android:text="@string/remember_password" />

            <CheckBox
                android:id="@+id/login_auto_login"
                style="@style/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dip"
                android:paddingLeft="20dip"
                android:text="@string/auto_login" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/login_btn"
            android:textColor="#FFFFFFFF"
            android:textSize="16dip" />
    </LinearLayout>

</LinearLayout>