<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <include layout="@layout/include_title_net" />

    <include layout="@layout/layout_netbar"/>

    <RelativeLayout
        android:id="@+id/login_relative_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="30.0dip"
        android:paddingTop="21.0dip" >

        <EditText
            android:id="@+id/login_edit_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/common_edit"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username_hint"
            android:maxLength="20"
            android:paddingLeft="10.0dip"
            android:saveEnabled="true"
            android:singleLine="true" />



        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_username"
            android:layout_alignRight="@+id/login_edit_username"
            android:layout_below="@+id/login_edit_username"
            android:drawableLeft="@drawable/pwd"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/common_edit"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10.0dip"
            android:saveEnabled="true" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_relative_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="10.0dip"
        android:paddingBottom="10.0dip" >

        <CheckBox
            android:id="@+id/login_remember_password"
            style="@style/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:paddingLeft="20dip"
            android:text="@string/remember_password" />

        <CheckBox
            android:id="@+id/login_auto_login"
            style="@style/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:paddingLeft="20dip"
            android:text="@string/auto_login" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/login_btn"
        android:textSize="16dip" />

</LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="当前版本号：1.14"
        android:textColor="@color/gray1"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        />


</RelativeLayout>