<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:orientation="horizontal" 
    >

    <ImageButton
        android:id="@+id/titlebar_img_btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:contentDescription="@string/titlebar_img_btn_left_desc"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />
    <RelativeLayout
        android:id="@+id/titlebar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/titlebar_title_bg"
        android:orientation="horizontal" 
        >

        <TextView
            android:id="@+id/titlebar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFFFF"
            android:textSize="17sp"
             />


        <ImageView
            android:id="@+id/titlebar_down_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/titlebar_text"
            android:background="#00000000"
            android:contentDescription="@string/titlebar_img_btn_down_arrow_desc"
            android:src="@drawable/titlebar_img_btn_down_arrow"
            android:visibility="gone" />
        <com.cattsoft.framework.view.SearchEditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="取消"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="11dp"
        android:paddingLeft="11dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/titlebar_img_btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:background="#00000000"
            android:contentDescription="@string/titlebar_img_btn_right_desc"
            />
        <TextView
            android:id="@+id/titlebar_textview_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            />
    </LinearLayout>
</RelativeLayout>