<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toplayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="#ffffff">

            <ImageView
                android:id="@+id/user_head_img"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/login_img" />

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_head_img"
                android:layout_centerHorizontal="true"
                android:text="普通用户登录"
                android:textColor="#ff9933"
                android:textSize="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#eeeeee">

            <EditText
                android:id="@+id/user_name_txt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/login_user_text_bg"
                android:drawableLeft="@drawable/login_user_name_img"
                android:drawablePadding="5dp"
                android:hint="@string/login_user_hint"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/user_name_txt"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/login_user_text_bg"
                android:drawableLeft="@drawable/login_user_password_img"
                android:drawablePadding="10dp"
                android:hint="@string/login_password_hint"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:password="true"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/password_txt"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>